Fix dropdown button menu size
When the text in the menu items is longer than the button,
it is cropped. This commit fixes this by allowing the dropdown
menu to be wider than the button.

--- a/src/styles/dropdown.scss
+++ b/src/styles/dropdown.scss
@@ -207,7 +207,6 @@
 .cbi-dropdown.cbi-button[open] > ul.dropdown {
   @media screen and (min-width: $breakpoint-md) {
     left: 0 !important;
-    right: 0 !important;
   }
 }
 
